<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/noticias_section" android:icon="@android:drawable/ic_menu_today"
            android:title="@string/title_section1" />
        <item android:id="@+id/videos_section" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/title_section2" />
        <item android:id="@+id/programas_section" android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/title_section3" />
        <item android:id="@+id/sobrenos_section" android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/title_section4" />
        <item android:id="@+id/informacoes_section" android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/title_section5" />
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
                android:title="Share" />
            <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>